# playing-with-lenses

./: LICENSE  Lens.cabal  README.md  lens.hs  shell.nix  stack.yaml
src/: Main.hs  Manual.hs
