name:                Lens
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/2chilled/Lens#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Herrmann
maintainer:          matthias.mh.herrmann@gmail.com
copyright:           Copyright: (c) 2016 Matthias Herrmann
category:            TBD
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Lens-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens >=4.0 && <=5.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/2chilled/Lens
