name:                Lens
version:             0.1.0.0
synopsis:            Just my playground for the Haskell lens library
description:         Please see README.md
homepage:            https://github.com/2chilled/Lens#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Herrmann
maintainer:          matthias.mh.herrmann@gmail.com
copyright:           Copyright: (c) 2016 Matthias Herrmann
category:            TBD
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Lens-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Manual
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/2chilled/play-with-lenses
